--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -6,7 +6,7 @@
 {% endif %}
 
 
-<form method="POST" action="{% url 'login' %}">
+<form method="POST" action="{% url 'accounts:login' %}">
   {% csrf_token %}
   <label for="username">Username :</label><br>
   <input type="text" name="username" required/>
