--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -8,6 +8,10 @@
 
 <form method="POST" action="{% url 'accounts:login' %}">
   {% csrf_token %}
+
+  {% if request.GET.next %}
+    <input type="hidden" name="next" value={{request.GET.next}}>
+  {% endif %}
   <label for="username">Username :</label><br>
   <input type="text" name="username" required/>
   <br>
