--- a/posts/templates/posts/create.html
+++ b/posts/templates/posts/create.html
@@ -1,1 +1,19 @@
-<h1>Create page</h1>
+<h1>New Post</h1>
+
+{% if error %}
+  {{error}}
+  <br/>
+  <br/>
+{% endif %}
+
+<form method="POST" action="{% url 'posts:create' %}">
+  {% csrf_token %}
+  <label for="title">Title:</label><br>
+  <input type="text" name="title" required/>
+  <br>
+  <label for="url">URL:</label><br>
+  <input type="text" name="url" required/>
+  <br>
+  <input type="submit" value="Post">
+
+</form>
