added homepage redirection and new_post POST

--- a/posts/templates/posts/create.html
+++ b/posts/templates/posts/create.html
@@ -12,7 +12,7 @@
   <input type="text" name="title" required/>
   <br>
   <label for="url">URL:</label><br>
-  <input type="text" name="url" required/>
+  <input type="text" name="url"/>
   <br>
   <input type="submit" value="Post">
 
