--- a/posts/templates/posts/create.html
+++ b/posts/templates/posts/create.html
@@ -1,3 +1,6 @@
+{% extends 'base.html'%}
+
+{% block content %}
 <h1>New Post</h1>
 
 {% if error %}
@@ -17,3 +20,4 @@
   <input type="submit" value="Post">
 
 </form>
+{% endblock %}
