--- a/posts/templates/posts/home.html
+++ b/posts/templates/posts/home.html
@@ -1,3 +1,6 @@
+{% extends 'base.html'%}
+
+{% block content %}
 <h1>This is the homepage</h1>
 <a href="{% url 'posts:create' %}">New Post</a>
 <br/>
@@ -19,3 +22,4 @@
     <input type="submit" value="DOWN">
   </form>
 {% endfor %}
+{% endblock %}
