--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -1,23 +1,28 @@
-<h1>Please Register!</h1>
+{% extends 'base.html'%}
 
-{% if error %}
-  {{error}}
-  <br><br>
-{% endif %}
+{% block content %}
 
-<form method="POST" action="{% url 'accounts:signup' %}">
-  {% csrf_token %}
-  <label for="username">Username :</label><br>
-  <input type="text" name="username" required/>
-  <br>
-  <label for="email">email :</label><br>
-  <input type="text" name="email" required/>
-  <br>
-  <label for="password">Password :</label><br>
-  <input type="password" name="password" required/>
-  <br>
-  <label for="verify">Verify:</label><br>
-  <input type="password" name="verify" required/>
-  <br>
-  <input type="submit" value="Sign Up"/>
-</form>
+  <h1>Please Register!</h1>
+
+  {% if error %}
+    {{error}}
+    <br><br>
+  {% endif %}
+
+  <form method="POST" action="{% url 'accounts:signup' %}">
+    {% csrf_token %}
+    <label for="username">Username :</label><br>
+    <input type="text" name="username" required/>
+    <br>
+    <label for="email">email :</label><br>
+    <input type="text" name="email" required/>
+    <br>
+    <label for="password">Password :</label><br>
+    <input type="password" name="password" required/>
+    <br>
+    <label for="verify">Verify:</label><br>
+    <input type="password" name="verify" required/>
+    <br>
+    <input type="submit" value="Sign Up"/>
+  </form>
+{% endblock %}
