--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -16,11 +16,12 @@
     {% endif %}
     <label for="username">Username :</label><br>
     <input type="text" name="username" required/>
-    <br>
+    <br/>
+    <br/>
     <label for="password">Password :</label><br>
     <input type="password" name="password" required/>
-    <br>
-
-    <input type="submit" value="LOG IN"/>
+    <br/>
+    <br/>
+    <input type="submit" value="LOG IN" class="btn btn-primary"/>
   </form>
 {% endblock %}
