--- a/posts/templates/posts/create.html
+++ b/posts/templates/posts/create.html
@@ -19,6 +19,10 @@
   <input type="text" name="url"/>
   <br/>
   <br/>
+  <label for="description">Description:</label><br>
+  <textarea name="description" rows="5" placeholder="Describe your project here"></textarea>
+  <br/>
+  <br/>
   <input type="submit" value="Post" class="btn btn-primary"/>
   <br/>
 
