--- a/posts/templates/posts/home.html
+++ b/posts/templates/posts/home.html
@@ -26,6 +26,7 @@
       <div>{{post.pub_date}}</div>
       <div>By {{post.author.username}}</div>
       <div>Votes : {{post.votes_total}}</div>
+      <div>Description : {{post.description}}</div>
     </div>
   </div>
 </div>
